Use session_id to find devices to stop in MediaStreamManager

In screen capture it is possible to have multiple sessions associated to
the same device in the same renderer process.
Prior to this CL, MSM::StopStreamDevice() received only the device ID,
which sometimes resulted in the wrong screen-capture tracks being stopped
on the renderer side.
This CL adds the session ID to the StopStreamDevice() so that only the
correct track is stopped.

Bug: 788400
Change-Id: If759af86fa9819e4c3574b2bc840ad45c3c924b7
Reviewed-on: https://chromium-review.googlesource.com/892859
Reviewed-by: Henrik Boström <hbos@chromium.org>
Reviewed-by: Tom Sepez <tsepez@chromium.org>
Commit-Queue: Guido Urdaneta <guidou@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533828}
Former-commit-id: 24acfac5aa663111412b1c845789390f8d43399e